<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.github.torrespro</groupId>
    <version>1.0.0</version>
    <artifactId>error-prone-contrib</artifactId>
    <description>Example ErrorProne BugPatterns</description>

    <name>Example :: ErrorProne BugPatterns</name>

    <properties>
        <java.version>21</java.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>${java.version}</maven.compiler.source>
        <maven.compiler.target>${java.version}</maven.compiler.target>
        <junit.version>4.13.2</junit.version>
        <error_prone.version>2.26.1</error_prone.version>
        <google-auto-service.version>1.1.1</google-auto-service.version>
    </properties>

    <licenses>
        <license>
            <name>Apache 2.0</name>
            <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
        </license>
    </licenses>

    <dependencies>
        <!-- If you add a dependency, please also add a comment with the license
             as the existing examples do.

             If the license is compatible with ours (e.g. Apache 2.0, BSD, and MIT
             are; assume anything else is not), please add the dependency to
             the Maven shade includes section below, so it will be packaged with
             the error-prone JAR file that we distribute.  -->
        <dependency>
            <!-- Apache 2.0 -->
            <groupId>com.google.errorprone</groupId>
            <artifactId>error_prone_annotation</artifactId>
            <version>${error_prone.version}</version>
        </dependency>
        <dependency>
            <!-- Apache 2.0 -->
            <groupId>com.google.errorprone</groupId>
            <artifactId>error_prone_check_api</artifactId>
            <version>${error_prone.version}</version>
        </dependency>
        <dependency>
            <groupId>com.google.errorprone</groupId>
            <artifactId>error_prone_core</artifactId>
            <version>${error_prone.version}</version>
        </dependency>
        <dependency>
            <!-- Apache 2.0 -->
            <groupId>com.google.errorprone</groupId>
            <artifactId>error_prone_test_helpers</artifactId>
            <version>${error_prone.version}</version>
            <scope>test</scope>
            <exclusions>
                <exclusion>
                    <groupId>junit</groupId>
                    <artifactId>junit</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter</artifactId>
            <version>5.10.2</version>
            <scope>test</scope>
        </dependency>
        <!-- Eclipse Public License 1.0 -->
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.13.0</version>
        <configuration>
            <source>21</source>
            <target>21</target>
          <parameters />
          <compilerArgs>
            <arg>--add-exports=java.base/jdk.internal.javac=ALL-UNNAMED</arg>
            <arg>--add-exports=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED</arg>
            <arg>--add-exports=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED</arg>
            <arg>--add-exports=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED</arg>
            <arg>--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED</arg>
            <arg>--add-exports=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED</arg>
            <arg>--add-exports=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED</arg>
            <arg>--add-exports=jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED</arg>
            <arg>--add-exports=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED</arg>
            <arg>--add-exports=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED</arg>
            <arg>--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED</arg>
            <arg>--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED</arg>
          </compilerArgs>
            <annotationProcessorPaths>
                <path>
                    <groupId>com.google.auto.service</groupId>
                    <artifactId>auto-service</artifactId>
                    <version>${google-auto-service.version}</version>
                </path>
            </annotationProcessorPaths>
          <testExcludes>
            <exclude>**/testdata/**</exclude>
          </testExcludes>
<!--          <release>${java.version}</release>-->
                </configuration>
                <executions>
                    <execution>
                        <id>default-compile</id>
                        <configuration>
                            <compilerArgs combine.children="append">
                                <arg>-Xlint:-options</arg>
                            </compilerArgs>
                        </configuration>
                    </execution>
                </executions>
            </plugin>

<!--            <plugin>  &lt;!&ndash; Create sources.jar &ndash;&gt;-->
<!--                <groupId>org.apache.maven.plugins</groupId>-->
<!--                <artifactId>maven-source-plugin</artifactId>-->
<!--                <version>3.3.1</version>-->
<!--                <executions>-->
<!--                    <execution>-->
<!--                        <id>attach-sources</id>-->
<!--                        <goals>-->
<!--                            <goal>jar</goal>-->
<!--                        </goals>-->
<!--                    </execution>-->
<!--                </executions>-->
<!--            </plugin>-->

<!--            <plugin>-->
<!--                <groupId>org.apache.maven.plugins</groupId>-->
<!--                <artifactId>maven-javadoc-plugin</artifactId>-->
<!--                <version>3.6.3</version>-->
<!--                <configuration>-->
<!--                    <additionalOptions>-->
<!--                        <arg>&#45;&#45;add-exports=java.base/jdk.internal.javac=ALL-UNNAMED</arg>-->
<!--                        <arg>&#45;&#45;add-exports=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED</arg>-->
<!--                        <arg>&#45;&#45;add-exports=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED</arg>-->
<!--                        <arg>&#45;&#45;add-exports=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED</arg>-->
<!--                        <arg>&#45;&#45;add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED</arg>-->
<!--                        <arg>&#45;&#45;add-exports=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED</arg>-->
<!--                        <arg>&#45;&#45;add-exports=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED</arg>-->
<!--                        <arg>&#45;&#45;add-exports=jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED</arg>-->
<!--                        <arg>&#45;&#45;add-exports=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED</arg>-->
<!--                        <arg>&#45;&#45;add-exports=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED</arg>-->
<!--                        <arg>&#45;&#45;add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED</arg>-->
<!--                        <arg>&#45;&#45;add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED</arg>-->
<!--                    </additionalOptions>-->
<!--                </configuration>-->
<!--                <executions>-->
<!--                    <execution>-->
<!--                        <id>attach-javadocs</id>-->
<!--                        <goals>-->
<!--                            <goal>jar</goal>-->
<!--                        </goals>-->
<!--                    </execution>-->
<!--                </executions>-->
<!--            </plugin>-->

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.1.0</version>
                <configuration>
                    <argLine>
                        -Xmx1g
                        --add-exports=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED
                        --add-exports=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED
                        --add-exports=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED
                        --add-exports=jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED
                        --add-exports=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED
                        --add-exports=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED
                        --add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED
                        --add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED
                        --add-opens=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED
                        --add-opens=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED
                        --add-opens=java.base/java.math=ALL-UNNAMED
                        --add-opens=java.base/java.nio=ALL-UNNAMED
                    </argLine>
                    <trimStackTrace>false</trimStackTrace>
                </configuration>
            </plugin>
        </plugins>
    </build>

</project>
